[tool.poetry]
name = "blockchain-fee-task"
version = "0.1.0"
description = "This is a sample exercise for understanding blockchain fee structures"
authors = ["Daniel Pichler, Ioannis Balomenos"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
