[tool.poetry]
name = "blockchain_fee_logger"
version = "1.0.0"
description = "This is a sample exercise for understanding blockchain fee structures"
authors = ["Hannes Brantner"]

[tool.poetry.dependencies]
python = "^3.11.7"
pydantic = "^2.5.3"
apscheduler = "^3.10.4"
pendulum = "^3.0.0"
aiohttp = "^3.9.1"
aiohttp-retry = "^2.8.3"

[tool.poetry.scripts]
main = "blockchain_fee_logger.main:main"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"
pytest = "^7.4.4"
types-requests = "^2.31.0.20240106"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
